impl questions + edit bckend
